feature tasks added to md cell for bike-stats

--- a/vg_stats.ipynb
+++ b/vg_stats.ipynb
@@ -23,7 +23,7 @@
     "Mason Fryberger 01/19/2021\n",
     "\n",
     "### Data Source and Analysis tools:\n",
-    "Data pulled from [Kaggle]\n",
+    "Data pulled from [Kaggle-Video-Game-Sales](https://www.kaggle.com/gregorut/videogamesales)\n",
     "\n",
     "Data structured and analyzed with Pandas and NumPy\n",
     "\n",
@@ -40,6 +40,7 @@
     "  to the sales of other platforms? \n",
     "  - overall?\n",
     "  - individually?\n",
+    "  \n",
     "- What Percent of the global marketshare is held by NA?\n",
     "- What is the average rate of growth for the game publishing industry globally?\n",
     "- Assuming a constant rate of growth and constant marketshare, what are the expected sales\n",
