standard deviation question complete

--- a/vg_stats.ipynb
+++ b/vg_stats.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,8 @@
     "import pandas as pd \n",
     "import matplotlib.pyplot as plt \n",
     "\n",
-    "df = pd.read_csv('data-sets-csv/vgsales.csv')\n"
+    "df = pd.read_csv('data-sets-csv/vgsales.csv')\n",
+    "pd.set_option('precision', 4)\n"
    ]
   },
   {
@@ -422,14 +423,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "0.5374406555006628 Global Average in millions\nTop Grossing Game of all time: Wii Sports with 82.74 million in Global Sales\n"
+      "0.5374406555006628 Global Average in millions\nTop Grossing Game of all time: Wii Sports with 82.74 million in Global Sales\nStandard Deviation: 1.5550279355699124\nNorth American sales for Top Grossing game of all time: 41.49\nAt 41.49 Wii Sports NA Sales are -27.0 standard deviations below the global average of 0.5374406555006628\n"
      ]
     }
    ],
@@ -439,7 +440,14 @@
     "\n",
     "top_gross = df[df['Global_Sales'] == df['Global_Sales'].max()][['Name']].set_index('Name')\n",
     "top_gross_val = df['Global_Sales'].max()\n",
-    "print(f'Top Grossing Game of all time: {top_gross.index[0]} with {top_gross_val} million in Global Sales')\n"
+    "print(f'Top Grossing Game of all time: {top_gross.index[0]} with {top_gross_val} million in Global Sales')\n",
+    "\n",
+    "standard_devi = df['Global_Sales'].std()\n",
+    "print(f'Standard Deviation: {standard_devi}')\n",
+    "top_gross_na_sales = df[df['Global_Sales'] == df['Global_Sales'].max()][['Name', 'NA_Sales']][['NA_Sales']].set_index('NA_Sales')\n",
+    "print(f'North American sales for Top Grossing game of all time: {top_gross_na_sales.index[0]}')\n",
+    "\n",
+    "print(f'At {top_gross_na_sales.index[0]} {top_gross.index[0]} NA Sales are {(global_mean - top_gross_na_sales.index[0]) // standard_devi} standard deviations below the global average of {global_mean}')"
    ]
   },
   {
