--- a/vg_stats.ipynb
+++ b/vg_stats.ipynb
@@ -511,6 +511,69 @@
    ]
   },
   {
+   "source": [
+    "### What percent of Global marketshare is held by NA:\n",
+    " \n",
+    "We can see this with a simple calculation by pulling the sum of NA sales and dividing it by the sum of global sales. \n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      " North America holds 49.0 % of the Global Market\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_mkt = df['Global_Sales'].sum().round(3)\n",
+    "na_mkt = df['NA_Sales'].sum().round(3)\n",
+    "mkt_capture_na = na_mkt / total_mkt\n",
+    "print(f' North America holds {mkt_capture_na.round(2) * 100} % of the Global Market')"
+   ]
+  },
+  {
+   "source": [
+    "### Average Rate of Growth for Global Game Sales.\n",
+    "\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "first year of study Global_Sales in millions: 11.0 \nlast year of study Global_Sales in millions: 0.29\nHistorical Growth of Global_Sales for 39 covered by the study:  -97.364 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "by_year = df.groupby('Year')[['Global_Sales']].sum()\n",
+    "num_years = by_year['Global_Sales'].count()\n",
+    "first_sales = by_year['Global_Sales'][by_year.index[0]].round()\n",
+    "print(f'first year of study Global_Sales in millions: {first_sales} ')\n",
+    "last_sales = by_year['Global_Sales'][by_year.index[-1]]\n",
+    "print(f'last year of study Global_Sales in millions: {last_sales}')\n",
+    "\n",
+    "growth = ((last_sales - first_sales ) / first_sales) * 100\n",
+    "print(f'Historical Growth of Global_Sales for {num_years} covered by the study:  {growth.round(3)} %')\n",
+    "# print(f'Global_Sales for {num_years} years covered by the study: in millions \\n {by_year}')\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
